# WinForge

./: .gitignore  README.md  pyproject.toml
artifact/: __init__.py  bundle.py  checkpoint.py  graph.py  index.py  inspection.py  kube.py  oci.py
builder/: __init__.py  executor.py  pipeline.py
cmd/: winforge.py
compat/: __init__.py  evidence.py  failure_analysis.py
container/: build.sh  docker-compose.yml  manager.py
core/: __init__.py  compatibility.py  manifest.py  media.py  modules.py  profiles.py  sources.py
docs/: architecture.md  container-architecture.md  legacy-installer-debugging-backlog.md  production-hardening-roadmap.md  reference-study.md  spec-v0.md  vic-boundary.md
examples/: chocolatey-firefox.winforge.yaml  enterprise-app.winforge.json  minimal.winforge.json  notepad-plus-plus.winforge.yaml  office-byo-files.winforge.yaml  powershell-wrapper-pwsh-vnc.winforge.yaml
recipes/: choco-sandbox.yaml  notepadplusplus.winforge.yaml  powershell-choco-test.winforge.yaml  pwschoco.winforge.yaml  pwsh-choco-sandbox.yaml  winetest.winforge.yaml
runtime/: __init__.py  catalog.json  catalog.py  launcher.py  providers.py  runner_cache.py  runner_catalog.py
tests/: test_checkpoint_resume.py  test_chocolatey_module.py  test_container.py  test_container_entrypoint.py  test_execution_graph.py  test_executor.py  test_failure_analysis.py  test_install_packaging.py  test_manifest_and_bundle.py  test_media_staging_and_policy.py  test_phase3_execution.py  test_phase5a_runner_catalog.py  test_phase5bc_oci_export.py  test_phase5d_artifact_index.py  (+10 more)
(+30 files in other folders)
